# drf_homeworks

./: .env.example  pyproject.toml  setup.cfg
apps/auth/: urls.py  views.py
apps/auto_parks/: serializers.py  urls.py  views.py
apps/auto_parks/migrations/: 0001_initial.py
apps/cars/: filter.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/cars/choices/: body_type_choice.py
apps/cars/migrations/: 0001_initial.py  0003_carmodel_created_at_carmodel_updated_at.py  0004_carmodel_body_type_alter_carmodel_brand_and_more.py  0005_alter_carmodel_options.py  0006_alter_carmodel_options.py  0007_carmodel_auto_park.py  0008_carmodel_photo.py
apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_usermodel_is_active.py
cars/: filter.py  models.py  serializers.py  views.py
cars/migrations/: 0002_alter_carmodel_table.py
configs/: settings.py  urls.py
configs/extra_cfg/: __init__.py  jwt_cfg.py  rest_framework_cfg.py
core/: paginations.py
core/dataclasses/: user_dataclass.py
core/enums/: action_token_enum.py
core/permissions/: is_admin_or_write_only.py
core/services/: email_service.py  file_service.py  jwt_service.py
templates/: base.html  password_recovery.html  register.html  test.html
